k3s/wordpress/templates/deployment-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: wordpress
    cloudman.io/creator: Templates
  namespace: wp
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  template:
    spec:
      restartPolicy: Always
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      serviceAccountName: deployment-wordpress-v1-sa
      containers:
        - image: "wordpress:6-apache"
          imagePullPolicy: IfNotPresent
          name: wordpress
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
