k3s/wordpress/templates/service-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: wp
  labels:
    app.kubernetes.io/name: mysql-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: wordpress
    cloudman.io/creator: Templates
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: mysql
  ports:
    - name: port-3306
      port: 3306
      targetPort: 3306
      protocol: TCP
