k3s/wordpress/templates/service-wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: wp
  labels:
    app.kubernetes.io/name: wordpress-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: wordpress
    cloudman.io/creator: Templates
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: wordpress
  ports:
    - name: port-80
      port: 80
      targetPort: 80
      protocol: TCP
