k3s/wordpress/templates/networkpolicy-allow-wordpress-to-mysql-3306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-wordpress-to-mysql-3306
  namespace: wp
  labels:
    app.kubernetes.io/name: allow-wordpress-to-mysql-3306
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: wordpress
    cloudman.io/creator: Templates
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: wordpress
      ports:
        - protocol: TCP
          port: 3306
